# laia-project

./: .dockerignore  .gitignore  Dockerfile.serving  Dockerfile.training  README.md  app.py  docker-compose.yml  preprocess.py  prometheus.yml  pyproject.toml  requirements.serving.txt  requirements.training.txt  schemas.py  test_api.py
.github/workflows/: 1_continuous_integration.yml  2_continuous_delivery.yml  3_continuous_staging.yml  4_continuous_deployment.yml  test_model_promotion.yml  test_vpn_connection.yml
experiment_tracking/ml-flow/: docker-compose.yml
mlflow/: Dockerfile  docker-compose.yml  mlflow-entrypoint.sh
model-promotion/: promote_model.py
models/: Dockerfile  download-data.py  download_data.py  gradient_boosting.py  linear_regression.py  preprocess.py  pyproject.toml  random_forest.py  run_all_models.py
serving/: Dockerfile  app.py  grafana.json  prometheus.yml  pyproject.toml  utils.py
tests/: conftest.py  test_api.py  test_e2e.py  test_train.py
