[project]
name = "laia-project"
version = "0.1.0"
requires-python = ">=3.13.7"
dependencies = [
    "boto3>=1.42.6",
    "fastapi>=0.124.2",
    "joblib>=1.5.2",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "uvicorn[standard]>=0.38.0",
]
